--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,5 +27,8 @@
 @import '../components/social/style';
 
 //personal
-@import '../pages/personal/style'
+@import '../pages/personal/style';
+
+//contact
+@import '../pages/scan/contact/style'
 
