添加推荐组件

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -30,5 +30,8 @@
 @import '../pages/personal/style';
 
 //contact
-@import '../pages/scan/contact/style'
+@import '../pages/scan/contact/style';
+
+//recommend
+@import '../components/recommend/style'
 
