build： import iconfont

--- a/docs/.vuepress/theme-fly/styles/index.styl
+++ b/docs/.vuepress/theme-fly/styles/index.styl
@@ -4,7 +4,7 @@
         padding: 0 auto;
     }
 
-    /* 文章分类 */
+    /* right body */
     .rightbar {
         order: -1;
         margin: 0 0 5px 0;
@@ -22,7 +22,7 @@
         margin: 0 10px;
     }
 
-    /* 推荐文章 */
+    /* left body */
     .home-leftBody {
         width: 100%;
         order: 0;
@@ -59,42 +59,34 @@
 
 @media screen and (min-width: 998px) and (max-width: 1280px) {
     #container {
-        width: 998px;
+        width: 70%;
     }
 
     .rightbar {
         order: 0;
-        width: 300px;
+        width: 31%;
         height: 455px;
     }
 
     .home-leftBody {
-        width: 631px;
+        width: 65%;
         order: 0;
-    }
-
-    .home-leftBody-article {
-        width: 590px;
     }
 }
 
 @media screen and (min-width: 1280px) {
     #container {
-        width: 998px;
+        width: 65%;
     }
 
     .rightbar {
         order: 0;
-        width: 300px;
+        width: 31%;
         height: 455px;
     }
 
     .home-leftBody {
-        width: 627px;
+        width: 65%;
         order: -1;
-    }
-
-    .home-leftBody-article {
-        width: 590px;
     }
 }
