--- a/docs/.vuepress/theme-fly/styles/palette.styl
+++ b/docs/.vuepress/theme-fly/styles/palette.styl
@@ -14,6 +14,7 @@ $fontSelect = #fde6ba;
   --shadowColor: #e2e2e2;
   --cateCurrent: #eee;
   --categories: #f8f8f8;
+  --homeArticleBg: #f3f3f3;
   codeThemeLight();
 }
 
@@ -30,5 +31,6 @@ $fontSelect = #fde6ba;
   --shadowColor: #3c3838;
   --cateCurrent: #4b4b4b;
   --categories: #333;
+  --homeArticleBg: #333;
   codeThemeDark();
 }
