add localstorge themeMode

--- a/docs/.vuepress/theme-fly/styles/palette.styl
+++ b/docs/.vuepress/theme-fly/styles/palette.styl
@@ -15,6 +15,8 @@ $fontSelect = #fde6ba;
   --cateCurrent: #eee;
   --categories: #f8f8f8;
   --homeArticleBg: #f3f3f3;
+  --lightModeBtn: #fff;
+  --darkModeBtn: #eee;
   codeThemeLight();
 }
 
@@ -32,5 +34,7 @@ $fontSelect = #fde6ba;
   --cateCurrent: #4b4b4b;
   --categories: #333;
   --homeArticleBg: #333;
+  --lightModeBtn: #444;
+  --darkModeBtn: #222;
   codeThemeDark();
 }
