--- a/theme-deeply/styles/palette.styl
+++ b/theme-deeply/styles/palette.styl
@@ -1,6 +1,11 @@
 
 $fontSelect = #fde6ba;
 
+$vssue-theme-color = #4a75b5
+
+// 引入 Vssue 的样式主文件和 github-markdown-css
+
+
 // 浅色模式
 .theme-mode-light {
   --bodyBg: #fff;
