--- a/theme-deeply/styles/index.styl
+++ b/theme-deeply/styles/index.styl
@@ -1,7 +1,11 @@
 @media screen and (max-width: 630px) {
     #container {
-        width: 90%;
+        width: 95%;
         padding: 0 auto;
+    }
+
+    .home-header-right {
+        display: none;
     }
 
     /* right body */
@@ -59,12 +63,12 @@
 
 @media screen and (min-width: 998px) and (max-width: 1280px) {
     #container {
-        width: 70%;
+        width: 85%;
     }
 
     .rightbar {
         order: 0;
-        width: 35%;
+        width: 34%;
         height: 455px;
     }
 
@@ -81,12 +85,12 @@
 
     .rightbar {
         order: 0;
-        width: 36%;
+        width: 35%;
         height: 455px;
     }
 
     .home-leftBody {
-        width: 61%;
+        width: 62%;
         order: -1;
     }
 }
