--- a/theme-deeply/templates/ssr.html
+++ b/theme-deeply/templates/ssr.html
@@ -11,6 +11,15 @@
   {{{ renderResourceHints() }}}
   {{{ renderStyles() }}}
   <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+  <script>
+    var _hmt = _hmt || [];
+    (function () {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?62d2c28ed48f158fc50c2a111bf89fcc";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
 </head>
 
 <body class="theme-mode-light">
