增加 搜索功能

--- a/theme-deeply/styles/palette.styl
+++ b/theme-deeply/styles/palette.styl
@@ -4,7 +4,11 @@ $fontSelect = #fde6ba;
 $vssue-theme-color = #4a75b5
 
 // 引入 Vssue 的样式主文件和 github-markdown-css
-
+$accentColor = #4a75b5
+$textColor = #2c3e50
+$borderColor = #eaecef
+$codeBgColor = #282c34
+$arrowBgColor = #ccc
 
 // 浅色模式
 .theme-mode-light {
