style: css optimization

--- a/theme-deeply/styles/index.styl
+++ b/theme-deeply/styles/index.styl
@@ -64,6 +64,7 @@
 @media screen and (min-width: 998px) and (max-width: 1280px) {
     #container {
         width: 70%;
+        min-width 800px
     }
 
     .rightbar {
@@ -80,7 +81,8 @@
 
 @media screen and (min-width: 1280px) {
     #container {
-        width: 63%;
+        width: 50%;
+        min-width: 900px
     }
 
     .rightbar {
