--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -1,4 +1,5 @@
 @import url('https://cdn.jsdelivr.net/npm/lxgw-wenkai-lite-webfont@1.6.0/style.min.css');
+
 :root {
   --vp-c-brand: #3081f7;
   --vp-c-brand-light: #4e8ff1;
@@ -12,11 +13,13 @@
   --vp-c-color-d: #2275f1;
   --vp-c-color-e: #3081f7;
 
+  --vp-local-search-result-selected-border: var(--vp-c-brand);
+  --vp-local-search-highlight-bg: rgba(48, 129, 247, 0.1);
+
   --vp-font-family-base: 'LXGW WenKai Lite', 'Inter var experimental', 'Inter var', -apple-system,
     BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans',
     'Helvetica Neue', sans-serif;
-  --vp-font-family-mono: 'LXGW WenKai Mono Lite', ui-monospace, SFMono-Regular, 'SF Mono', Menlo,
-    Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+
   --vp-avator-border: #ffffff;
 
   --vp-nav-height: 60px;
@@ -26,6 +29,7 @@
   --btn-bg: #faf6f1;
   --btn-hover-bg: rgba(0, 0, 0, 0.2);
 }
+
 .dark {
   --vp-c-bg: #0e1117;
   --vp-c-text: white;
@@ -36,7 +40,23 @@
   --btn-bg: #21262c;
   --btn-hover-bg: #30363d;
   --footer-color: #161b22;
+  --vp-code-block-bg: #161b22;
 }
+
+.vp-doc div[class*='language-'] {
+  background-color: var(--vp-code-block-bg);
+  border-radius: 8px;
+  font-size: 14px;
+  line-height: 1.6;
+  font-family: var(--vp-font-family-mono);
+}
+
+.vp-doc div[class*='language-'] code {
+  font-family: var(--vp-font-family-mono);
+  font-size: 14px;
+  line-height: 1.6;
+}
+
 #app {
   min-height: 100vh;
   position: relative;
@@ -56,8 +76,9 @@
 }
 
 .VPHome {
-  height: 100vh;
-  padding-bottom: var(--vp-nav-height) !important;
+  height: calc(100vh - 60px);
+  padding-bottom: 0 !important;
+  margin-bottom: 0 !important;
   background-color: var(--footer-color);
 }
 
@@ -68,11 +89,30 @@
 }
 
 .search-bar {
-  margin-top: var(--vp-nav-height);
+  width: 100%;
+  max-width: 600px;
+  margin: var(--vp-nav-height) auto 0;
+  padding: 0 20px;
+  transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 768px) {
+  .search-bar {
+    max-width: 100%;
+    padding: 0 16px;
+  }
 }
 
 .DocSearch.DocSearch-Button {
+  border: none;
   background-color: var(--vp-c-bg);
+
+  &:hover {
+    border: none;
+  }
+}
+.DocSearch-Button-Placeholder {
+  min-width: 100px;
 }
 
 .VPNav {
